# aoc2024

./: .cookie.example  .gitignore  .gitmodules  CMakeLists.txt  README.md  wifi.example.hpp
common/: CMakeLists.txt  api.cpp  api.hpp  coro.hpp  delete_with.hpp  scan.cpp  scan.hpp
pico/: CMakeLists.txt  lwipopts.h  main.cpp  schedule.cpp  schedule.hpp  solve.cpp  solve.hpp  tcp.cpp  tcp.hpp  wifi.hpp
puzzles/: fetch.sh  solve.sh
solutions/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp
